画像を挿入

--- a/文章校正ツール/index.html
+++ b/文章校正ツール/index.html
@@ -16,6 +16,7 @@
       </tr>
     </table>
       <button id="btn">実行！</button>
+      <img id="btn" src="dan.jpeg">
     <script src="main.js"></script>
   </body>
 </html>
