--- a/文章校正ツール/index.html
+++ b/文章校正ツール/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <h1>文章校正ツール</h1>
+    <hr>
     <p>機能1：全角英数字を半角英数字に変換</p>
     <p>機能2：全角文字列の中に含まれる半角文字の両端に，半角スペースを挿入する</p>
     <table>
@@ -15,8 +17,8 @@
         <td><textarea id="text2" placeholder="結果が表示されます" rows="30" cols="80"></textarea></td>
       </tr>
     </table>
-      <button id="btn">実行！</button>
-      <img id="btn" src="dan.jpeg">
+    <button id="btn"><span id="execute">実行！</span></button>
+      <!-- <img id="btn" src="dan.jpeg"> -->
     <script src="main.js"></script>
   </body>
 </html>
