--- a/文章校正ツール/index.html
+++ b/文章校正ツール/index.html
@@ -1,15 +1,14 @@
+<!-- 文章校正ツール
+機能1：全角英数字を半角英数字に変換
+機能2：全角文字列の中に含まれる半角文字の両端に，半角スペースを挿入する -->
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
-    <title>文章校正ツール</title>
+    <title>ツール</title>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h1>文章校正ツール</h1>
-    <hr>
-    <p>機能1：全角英数字を半角英数字に変換</p>
-    <p>機能2：全角文字列の中に含まれる半角文字の両端に，半角スペースを挿入する</p>
     <table>
       <tr>
         <td><textarea id="text1" placeholder="ここにテキストを入力してください" rows="30" cols="80"></textarea></td>
