コメント追加とソース整理

--- a/文章校正ツール/index.html
+++ b/文章校正ツール/index.html
@@ -1,11 +1,13 @@
-<!-- 文章校正ツール
-機能1：全角英数字を半角英数字に変換
-機能2：全角文字列の中に含まれる半角文字の両端に，半角スペースを挿入する -->
+<h2>文章校正ツール</h2>
+<p>機能1：全角英数字を半角英数字に変換</p>
+<p>機能2：全角文字列の中に含まれる半角文字の両端に，半角スペースを挿入する<br><br>
+  &nbsp&nbsp&nbsp&nbsp例：「りんごは英語でAPPLEです」→「りんごは英語で APPLE です」<br>
+  &nbsp&nbsp&nbsp&nbsp※"APPLE"の両端に半角スペースが挿入されている</p>
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
-    <title>ツール</title>
+    <title>文章校正ツール</title>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
@@ -16,8 +18,7 @@
         <td><textarea id="text2" placeholder="結果が表示されます" rows="30" cols="80"></textarea></td>
       </tr>
     </table>
-    <button id="btn"><span id="execute">実行！</span></button>
-      <!-- <img id="btn" src="dan.jpeg"> -->
+    <button id="btn">実行！</button>
     <script src="main.js"></script>
   </body>
 </html>
